feat(mcp): MCP-147 protect evidence by policy