@@ -17,26 +17,30 @@ import static org.junit.jupiter.api.Assertions.*;
 class EvidenceStoreTest {
     @Test
     void verifiesDigestAndKeepsIdempotentImmutableArtifact(@TempDir Path root) throws Exception {
-        EvidenceStore store = new EvidenceStore(new EvidenceProperties(root, 1024), new ObjectMapper());
+        EvidenceStore store = new EvidenceStore(new EvidenceProperties(root, 1024), new ObjectMapper(), new EvidencePolicy());
         byte[] content = "proof".getBytes(StandardCharsets.UTF_8);
         String digest = HexFormat.of().formatHex(MessageDigest.getInstance("SHA-256").digest(content));
         String encoded = Base64.getEncoder().encodeToString(content);
-        EvidenceStore.StoredEvidence first = store.store("task-1", "attempt-1", "tests", "text/plain", encoded, digest);
-        EvidenceStore.StoredEvidence replay = store.store("task-1", "attempt-1", "tests", "text/plain", encoded, digest);
+        EvidenceStore.StoredEvidence first = store.store("task-1", "attempt-1", "tests", "text/plain", encoded, digest, "workflow");
+        EvidenceStore.StoredEvidence replay = store.store("task-1", "attempt-1", "tests", "text/plain", encoded, digest, "workflow");
         assertEquals(first.uri(), replay.uri());
         assertEquals(1, java.nio.file.Files.list(root.resolve("task-1/attempt-1")).count());
-        assertThrows(SecurityException.class, () -> store.store("task-1", "attempt-1", "tests", "text/plain", encoded, "a".repeat(64)));
+        byte[] encrypted = java.nio.file.Files.readAllBytes(root.resolve("task-1/attempt-1/tests-" + digest + ".bin"));
+        assertFalse(new String(encrypted, StandardCharsets.UTF_8).contains("proof"));
+        assertEquals("INTERNAL", first.classification());
+        assertThrows(SecurityException.class, () -> store.store("task-1", "attempt-1", "tests", "text/plain", encoded, "a".repeat(64), "workflow"));
+        assertThrows(SecurityException.class, () -> store.store("task-1", "attempt-1", "tests", "text/plain", encoded, digest, "agent"));
     }
 
     @Test
     void manifestAcceptsOnlyStoredSameAttemptArtifacts(@TempDir Path root) throws Exception {
-        EvidenceStore store = new EvidenceStore(new EvidenceProperties(root, 1024), new ObjectMapper());
+        EvidenceStore store = new EvidenceStore(new EvidenceProperties(root, 1024), new ObjectMapper(), new EvidencePolicy());
         Map<String, EvidenceStore.EvidenceReference> artifacts = new LinkedHashMap<>();
         for (String type : java.util.List.of("plan", "patch", "metadata", "tests", "sonar", "sbom", "trivy", "review", "approval")) {
             byte[] content = type.getBytes(StandardCharsets.UTF_8);
             String digest = HexFormat.of().formatHex(MessageDigest.getInstance("SHA-256").digest(content));
             EvidenceStore.StoredEvidence stored = store.store("task-1", "attempt-1", type, "text/plain",
-                    Base64.getEncoder().encodeToString(content), digest);
+                    Base64.getEncoder().encodeToString(content), digest, "workflow");
             artifacts.put(type, new EvidenceStore.EvidenceReference(stored.uri(), stored.digest(), stored.status()));
         }
         String patchDigest = artifacts.get("patch").digest();
@@ -48,10 +52,9 @@ class EvidenceStoreTest {
         EvidenceStore.StoredManifest replay = store.createManifest("task-1", "attempt-1", "customer-api",
                 "a".repeat(40), patchDigest, artifacts, decision);
         assertEquals(first.manifestId(), replay.manifestId());
-        String document = java.nio.file.Files.readString(root.resolve("task-1/attempt-1/manifest-" + first.manifestId() + ".json"));
-        assertTrue(document.contains("\"schema_version\":\"1\""));
-        assertTrue(document.contains("\"policy_decision\""));
-        assertFalse(document.contains("schemaVersion"));
+        byte[] encryptedManifest = java.nio.file.Files.readAllBytes(root.resolve("task-1/attempt-1/manifest-" + first.manifestId() + ".json"));
+        assertFalse(new String(encryptedManifest, StandardCharsets.UTF_8).contains("policy_decision"));
+        assertEquals("CONFIDENTIAL", first.classification());
         Map<String, EvidenceStore.EvidenceReference> crossTask = new LinkedHashMap<>(artifacts);
         crossTask.put("tests", new EvidenceStore.EvidenceReference(
                 artifacts.get("tests").uri().replace("task-1", "task-2"), artifacts.get("tests").digest(), "COMPLETE"));
